improved error handling to the user (invalids id, no item found in query)

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -73,7 +73,7 @@
     </mat-list-item>
   </mat-list>
 </span>
-<div *ngIf="!album">
+<div *ngIf="!loading">
   <h1>Invalid id</h1>
   <br/>
   <p>Sorry. We can't find any albums with the provided id.</p>
