fix on displaying invalid id while it is valid

--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </span>
-<div *ngIf="!loading">
+<div *ngIf="!loading && !albums">
   <h1>Invalid Artist</h1>
   <br/>
   <p>Sorry. We can't find any artists with the provided id.</p>
