--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -13,6 +13,6 @@
     </div>
   </div>
 </div>
-<div *ngIf="!loading">
+<div *ngIf="!loading && results.length == 0">
   <p>Sorry. We couldn't find any albums that matches your request.</p>
 </div>
