login view and feature working

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -11,7 +11,7 @@ mat-card {
     padding-top: 10px;
   }
   
-  #registration {
+  #login {
     color: rgb(251, 253, 230) !important;
     border-radius: 10px !important;
     background: #312d52 !important;
