--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,45 @@
-<mat-card>
-    <mat-card-content>
-      <form>
-        <h2>Log In</h2>
-        <mat-error> Optional Warning</mat-error><br />
-        <mat-form-field class="full-width-input">
-          <input matInput placeholder="User Name" name="username" required autofocus>
-          <mat-error>Please provide a valid user name</mat-error>
-        </mat-form-field><br />
-        <mat-form-field class="full-width-input">
-          <input matInput type="password" placeholder="Password" name="password" password="password" required>
-          <mat-error>Please provide a valid password</mat-error>
-        </mat-form-field><br />
-        <button mat-raised-button color="accent" type="submit">
-          <mat-icon>login</mat-icon>
-          <span>&nbsp;&nbsp;&nbsp;Login</span>
-        </button>
-        &nbsp;&nbsp;
-        <button mat-raised-button color="primary">
-          <mat-icon>account_box</mat-icon>
-          <span>&nbsp;&nbsp;&nbsp;Register</span>
-        </button>
-      </form>
-    </mat-card-content>
-  </mat-card>
+<mat-card id="login">
+  <mat-card-content>
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <h2>Log In</h2>
+      <mat-error *ngIf="warning">{{ warning }}</mat-error><br />
+      <mat-form-field class="full-width-input">
+        <input
+          matInput
+          placeholder="User Name"
+          name="username"
+          [(ngModel)]="user.userName"
+          required
+          #username="ngModel"
+          autofocus
+          email
+        />
+        <mat-error class="ng-invalid">Please provide a valid user name</mat-error> </mat-form-field
+      ><br />
+      <mat-form-field class="full-width-input">
+        <input
+          matInput
+          type="password"
+          placeholder="Password"
+          name="password"
+          password="password"
+          required
+          [(ngModel)]="user.password"
+          #password="ngModel"
+        />
+        <mat-error class="ng-touched" *ngIf="password.errors?.required"> Please provide a valid password</mat-error> </mat-form-field
+      ><br />
+      <div *ngIf="loading">Processing Request</div>
+      <button class="ng-touched" mat-raised-button color="accent" type="submit" [disabled]="loading">
+        <mat-icon>login</mat-icon>
+        <span>&nbsp;&nbsp;&nbsp;Login</span>
+      </button>
+      &nbsp;&nbsp;
+      <button mat-raised-button color="primary" routerLink="/register" id="registration-button">
+        <mat-icon>account_box</mat-icon>
+        <span>&nbsp;&nbsp;&nbsp;Register</span>
+      </button>
+
+    </form>
+  </mat-card-content>
+</mat-card>
