added real spotify typage

--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -18,6 +18,7 @@
       class="album-cover"
       [src]="album.images[1].url"
       alt="album art"
+      *ngIf="album.images"
   /></a>
   <strong>Release Date: </strong
   >{{ utilService.convertDate(album.release_date) }}
