--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,10 +13,9 @@
           autofocus
           [(ngModel)]="registerUser.userName"
           #username="ngModel"
-          email
         />
         <mat-error class="ng-invalid"
-          >Please provide a valid email address</mat-error
+          >Please provide a valid user name</mat-error
         > </mat-form-field
       ><br />
       <mat-form-field class="full-width-input">
