--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
         <span>&nbsp;&nbsp;&nbsp;Login</span>
       </button>
       &nbsp;&nbsp;
-      <button mat-raised-button color="primary" routerLink="/register" id="registration-button">
+      <button mat-raised-button color="primary" [routerLink]="'/register'" id="registration-button">
         <mat-icon>account_box</mat-icon>
         <span>&nbsp;&nbsp;&nbsp;Register</span>
       </button>
