small fix on register button that had route link in wrong place

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -61,8 +61,8 @@
   <div *ngIf="loading">Processing Request</div>
   <div class="success" *ngIf="success">
     Registration Successful. Proceed to<br /><br />
-    <a mat-raised-button color="accent">
-      <mat-icon routerLink="/login">login</mat-icon>&nbsp;&nbsp;&nbsp;Login
+    <a mat-raised-button color="accent" routerLink="/login">
+      <mat-icon >login</mat-icon>&nbsp;&nbsp;&nbsp;Login
     </a>
   </div>
 </mat-card>
